--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="main">
-        <img src="/Logo.png" alt="Main Logo">
+        <img src="Logo.png" alt="Main Logo">
         <!-- Timer section below the main logo image -->
         <div class="timer" id="timer">
             Event starts in: 00h 00m 00s
